--- a/app/client/views/index.ejs
+++ b/app/client/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Hello, this is client</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
 
@@ -14,8 +15,7 @@
 
     </div>
 
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="/js/main.js" charset="utf-8"></script>
+    <script src="/js/dist.js" charset="utf-8"></script>
 
   </body>
 </html>
