--- a/app/client/views/index.ejs
+++ b/app/client/views/index.ejs
@@ -11,11 +11,12 @@
 
     <button type="button" id="get-data">Get Server Data</button>
 
-    <div id="server-data">
+    <div id="server-data"></div>
+
+    <div id="main-wrapper">
 
     </div>
 
     <script src="/js/dist.js" charset="utf-8"></script>
-
   </body>
 </html>
