Using vue components all the way

--- a/app/client/views/index.ejs
+++ b/app/client/views/index.ejs
@@ -7,15 +7,7 @@
   </head>
   <body>
 
-    <h1>Yo, this is client.</h1>
-
-    <button type="button" id="get-data">Get Server Data</button>
-
-    <div id="server-data"></div>
-
-    <div id="main-wrapper">
-
-    </div>
+    <div id="main-wrapper"></div>
 
     <script src="/js/dist.js" charset="utf-8"></script>
   </body>
